# mini_tensor

./: CMakeLists.txt  Makefile  README.md  main.py  setup.py
benchmark/: ops.py
minitensor/: __init__.py  device.py  dtypes.py  initializers.py  ops.py  tensor.py
minitensor/_C/: bindings.cpp  kernels.cu
minitensor/_C/cpp/: CMakeLists.txt  bindings.cpp  ops.cpp  ops.h
minitensor/_C/cuda/: CMakeLists.txt  bindings.cpp  err.h  helpers.h  kernels.cu  kernels.h  ops.cu  ops.h
minitensor/_C/cudnn/: CMakeLists.txt  bindings.cpp  cudnn_handle_wrapper.cu  cudnn_handle_wrapper.h  err.h  ops.cu  ops.h
testing/: bench_ops.py  test_device.py  test_indexing.py  test_ops.py  xp_ops.py
